# uhoh

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-linux.yml  build-windows.yml
docker/: Dockerfile.linux
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: coordinator.rs  fs_watcher.rs  kqueue_watcher.rs  lib.rs  libproc_scanner.rs  main.rs  poller.rs  recovery.rs  scanner.rs  state.rs  store.rs
src-tauri/src/adapters/: aider.rs  claude.rs  codex.rs  gemini.rs  goose.rs  kimi.rs  mod.rs  opencode.rs
src/components/: CrashPanel.tsx  RestoreBar.tsx  SessionCard.tsx  SessionList.tsx  StatusHeader.tsx  ToolBadge.tsx
src/hooks/: useSessions.ts  useSettings.ts
src/lib/: tauri.ts  types.ts
src/styles/: main.css
