[package]
name = "uhoh"
version = "0.1.0"
edition = "2021"

[lib]
name = "uhoh_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
window-vibrancy = "0.5"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo = "0.33"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
